--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/sql.js": "^1.4.4",
     "@types/terminal-kit": "^2.5.1",
     "openai": "^4.8.0",
-    "terminal-kit": "^3.0.0"
+    "terminal-kit": "^3.0.0",
+    "typescript": "^5.2.2"
   }
 }
