--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "paths": {}, // A series of entries which re-map imports to lookup locations relative to the baseUrl
     // Source Map
     "sourceMap": true, // enables the use of source maps for debuggers and error reporting etc
-    "sourceRoot": "src/", // Specify the location where a debugger should locate TypeScript files instead of relative source locations.
+    "rootDir": "./src", // Specify the root folder within your source files.
     "declaration": true,
     "declarationMap": true,
     "strict": true,
