Main test working again

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Hrishi Olickel",
+  "author": "Hrishi Olickel <hrishi[at]grey-wing.com>",
   "name": "wishful-search",
   "version": "0.0.2",
   "license": "MIT",
