--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "csv-parse": "^5.5.1",
     "hjson": "^3.2.2",
     "openai": "^4.8.0",
+    "readline": "^1.3.0",
     "rimraf": "^5.0.5",
     "terminal-kit": "^3.0.0",
     "ts-loader": "^9.4.4",
