--- a/tsconfig.browser.json
+++ b/tsconfig.browser.json
@@ -26,9 +26,9 @@
 
     // Linter Checks
     "noImplicitReturns": true,
-    "noUncheckedIndexedAccess": true // accessing index must always check for undefined
-    // "noUnusedLocals": true, // Report errors on unused local variables.
-    // "noUnusedParameters": true // Report errors on unused parameters in functions
+    "noUncheckedIndexedAccess": true, // accessing index must always check for undefined
+    "noUnusedLocals": true, // Report errors on unused local variables.
+    "noUnusedParameters": true // Report errors on unused parameters in functions
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules/**/*", "tests/**/*"]
