--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "npm run build:node && npm run build:browser"
   },
   "devDependencies": {
+    "@azure/openai": "^1.0.0-beta.9",
     "@types/hjson": "^2.4.4",
     "@types/node": "^20.5.7",
     "@types/sql.js": "^1.4.4",
