--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@anthropic-ai/sdk": "^0.8.1",
     "@azure/openai": "^1.0.0-beta.9",
     "api": "^6.1.1",
-    "openai": "^4.14.2",
+    "openai": "^4.24.7",
     "sql.js": "^1.8.0"
   },
   "scripts": {
@@ -21,6 +21,9 @@
     "build": "npm run build:node && npm run build:browser"
   },
   "devDependencies": {
+    "@types/fast-levenshtein": "^0.0.4",
+    "date-fns": "^3.3.0",
+    "fast-levenshtein": "^3.0.0",
     "@types/hjson": "^2.4.4",
     "@types/node": "^20.5.7",
     "@types/sql.js": "^1.4.4",
@@ -33,6 +36,7 @@
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "xlsx": "^0.18.5"
   }
 }
