--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@anthropic-ai/sdk": "^0.16.1",
     "@azure/openai": "^1.0.0-beta.9",
     "api": "^6.1.1",
+    "oboe": "^2.1.5",
     "openai": "^4.24.7",
     "sql.js": "^1.8.0"
   },
@@ -24,6 +25,7 @@
     "@types/fast-levenshtein": "^0.0.4",
     "@types/hjson": "^2.4.4",
     "@types/node": "^20.5.7",
+    "@types/oboe": "^2.1.4",
     "@types/sql.js": "^1.4.4",
     "@types/terminal-kit": "^2.5.1",
     "csv-parse": "^5.5.1",
