--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@anthropic-ai/sdk": "^0.16.1",
     "@azure/openai": "^1.0.0-beta.9",
     "api": "^6.1.1",
+    "groq-sdk": "^0.3.1",
     "oboe": "^2.1.5",
     "openai": "^4.24.7",
     "sql.js": "^1.8.0"
